junit surefire changes